<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IMsenior</string>
    <string name="options">選項</string>
    <string name="cancel">取消</string>
    <string name="comfirm">確認</string>
    <!-- EditText 提示文字 -->
    <string name="hint_product_name">請輸入產品名稱</string>
    <string name="hint_end_date">例如：20250501(數字)</string>
    <string name="hint_barcode">請輸入barcode</string>
    <string name="hint_brand_name">請輸入品牌名稱</string>
    <string name="hint_quantity">輸入單位，例：100g</string>

    <!-- TextView 標籤 -->
    <string name="label_product_name">產品名稱</string>
    <string name="label_end_date">有效日期</string>
    <string name="label_brand_name">品牌名稱</string>

    <!-- RadioButton -->
    <string name="category_food">食物</string>
    <string name="category_ingredient">食材</string>

    <string name="add">新增</string>

    <string name="scan">掃描</string>

    <string name="recipe">食譜</string>

    <string name="HP">首頁</string>

    <string name="reLog">切換帳號</string>
    <string name="setting">設定</string>

    <string name="help_title">說明</string>
    <string name="about_title">關於</string>

    <string name="click_HP">您當前已在該頁面</string>

    <string name="greeting_user">哈囉，%s！</string>
    <string name="anonymous_user">匿名使用者</string>


    <string name="about_text">"     此APP是淡江大學資管系進行開發的畢業專題，專題題目為”PantryMate食品櫃好夥伴”。      從分析使用者需求，再進行功能設計與介面規劃，並透過程式開發不斷測試與改進。      此APP仍在開發中，可能會遇到設計不完善的地方，我們會再進行反覆調整。      APP開發人員名單：      陳庭浩 系統主開發、後端主控、後端資安、AI食譜      林峰彬 到期通知提醒功能      王鼎元 關於、說明       "</string>

    <string name="help_text">
1.在新增頁面左下有個掃描鍵，進入掃描頁面後可以掃描食材的barcode，將食材數據存入資料庫中。\n
2.APP裡的AI食譜僅基於資料庫裡的食材，不會根據食物去做考量。\n
3.在使用此APP時，資料庫會以監聽器時現多端實時同步資料，進行新增、刪除、修改等。
</string>
    <string name="send">送出</string>
    <string name="addonAI">輸入您的要求(可選)</string>
    <string name="back">返回</string>
    <string name="copy">複製</string>
    <string name="copyied">已經複製到剪貼簿</string>
    <string name="uncopied">複製到剪貼簿失敗</string>
    <string name="returnAI">以繁體中文回應</string>
    <string name="amount">量：</string>
    <string name="addDate">建立日期：</string>
    <string name="endateItem">有效日期：</string>
    <string name="label_quantity">重量/單位</string>
    <string name="expiryalert">食材到期提醒</string>
    <string name="camera">辨識</string>
    <string name="Aishowhere">AI 回覆將顯示於此</string>
    <string name="AIthinking">AI 思考中......</string>
    <string name="takpic">拍照</string>
    <string name="picpic">從相簿中選擇</string>
    <string name="aroundshop">附近的購物點</string>

</resources>