<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_edit">


    <EditText
        android:id="@+id/editProduct"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/hint_product_name"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/Product"
        app:layout_constraintTop_toBottomOf="@+id/Product" />

    <EditText
        android:id="@+id/editenddate"
        android:layout_width="261dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_end_date"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/endate"
        app:layout_constraintTop_toBottomOf="@+id/endate" />

    <TextView
        android:id="@+id/Product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:text="@string/label_product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_end_date"
        app:layout_constraintStart_toStartOf="@+id/editProduct"
        app:layout_constraintTop_toBottomOf="@+id/editProduct" />

    <RadioGroup
        android:id="@+id/category"
        android:layout_width="282dp"
        android:layout_height="89dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/editBrand"
        app:layout_constraintTop_toBottomOf="@+id/editBrand">

        <RadioButton
            android:id="@+id/food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_food" />

        <RadioButton
            android:id="@+id/source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_ingredient" />
    </RadioGroup>



    <TextView
        android:id="@+id/Brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/label_brand_name"
        app:layout_constraintStart_toStartOf="@+id/editenddate"
        app:layout_constraintTop_toBottomOf="@+id/editenddate" />

    <EditText
        android:id="@+id/editBrand"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/hint_brand_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/Brand"
        app:layout_constraintTop_toBottomOf="@+id/Brand" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="289dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_quantity"
        app:layout_constraintStart_toStartOf="@+id/category"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <ImageView
        android:id="@+id/dateIcon"
        android:layout_width="62dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="@+id/editenddate"
        app:layout_constraintStart_toEndOf="@+id/editenddate"
        app:srcCompat="@android:drawable/ic_menu_agenda" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btmedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_edit_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>